# sesew

./: CMakeLists.txt  section .data
.github/workflows/: build.yml
gorshok_distortion/: CMakeLists.txt  README.md
gorshok_distortion/.github/workflows/: build.yml
gorshok_distortion/src/: main.c
src/: dsp_core.asm  main.c
